--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -16,9 +16,9 @@
     <br/>
     <div class="form-group row">
         <div class="col-xs-4">
-    <input type=text name=username class="form-control" placeholder="Username"><br/>
-    <input type=password name=password class="form-control" placeholder="Password"><br/>
-    <input type="submit" class="btn btn-danger" name="login" value="Login">
+    <input type=text name=username class="form-control" placeholder="Username"/><br/>
+    <input type=password name=password class="form-control" placeholder="Password"/><br/>
+    <input type="submit" class="btn btn-danger" name="login" value="Login"/>
     </div>
     </div>
   </form>
