--- a/producthunt/templates/base.html
+++ b/producthunt/templates/base.html
@@ -18,15 +18,7 @@
 
 
     <style>
-      .bg {
 
-  background-image: url("{% static 'back.jpg' %}");
-
-
-  height: 100%;
-
-  background-size: cover;
-}
 
 .center_div{
   margin: 0 auto;
@@ -51,11 +43,11 @@
     <!-- Custom styles for this template -->
 
   </head>
-  <body style="overflow-y:hidden;" class="bg" >
+  <body >
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#16A085  ">
   <div class=container>
-  <a class="navbar-brand" href="" >
+  <a class="navbar-brand" href="{%url 'home' %}" >
   <img src="{% static 'logo.png' %}" class="d-inline-block align-top" height="30" />
     Product Hunt</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,6 +56,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto" >
       {% if user.is_authenticated %}
+      <a class="nav-item nav-link active" href="{% url 'create' %}">ADD PRODUCT</a>
       <a class="nav-item nav-link active" href="javascript:{document.getElementById('logout').submit()}">LOGOUT</a>
       <form id="logout" action="{% url 'logout' %}" method="POST">
         {% csrf_token %}
